# nomos

./: Cargo.toml  README.md
beams/: Cargo.toml  beams1.rs  beams2.rs  beams3.rs
beams/dots/50_node/: graph_edges.csv
beams/graphs/50_node/: graph_positions.csv
demiurge/ploom/: ploom2.rs  ploom3.rs  ploom4.rs  ploom6.rs
fromme/: Cargo.toml  READ_ME.md  threewe.rs  toyou.rs
fromme/assets/shaders/: animate_shader.wgsl
proto/: Cargo.toml  README.md  template.rs
proto/ploom/: a.rs  c.rs  d.rs  e.rs  ploom1.rs  ploom2.rs  ploom3.rs  ploom4.rs  ploom5.rs  ploom6.rs  ploom7.rs
proto/trellis/: b.rs  base.rs  billiards.rs
