[package]
name = "beams"
version = "0.1.0"
authors = ["magi-1"]
description = ""
edition = "2021"

[dependencies]
nannou = "0.18.0"
nannou_egui = "0.5.0"
csv = "1.1"
rand = "0.6.5"
serde = "1.0.136"
serde_derive = "1.0.136"
nalgebra = "0.16.4"
hexasphere = "8.0.0"

[[example]]
name = "dots_a"
path = "dots/a.rs"

[[example]]
name = "dots_b"
path = "dots/b.rs"

[[example]]
name = "dots_c"
path = "dots/c.rs"