[package]
name = "proto"
version = "0.1.0"
authors = ["magi-1"]
description = "ploom = points(point) + N(mu,sigma*I)"
edition = "2021"

[dependencies]
nannou = "0.18.0"
rand = "0.6.5"

[[example]]
name = "ploom_a"
path = "ploom/a.rs"
[[example]]
name = "ploom_b"
path = "ploom/b.rs"
[[example]]
name = "ploom_c"
path = "ploom/c.rs"
[[example]]
name = "ploom_d"
path = "ploom/d.rs"
[[example]]
name = "ploom_e"
path = "ploom/e.rs"
[[example]]
name = "ploom_f"
path = "ploom/f.rs"

[[example]]
name = "trellis_a"
path = "trellis/a.rs"
[[example]]
name = "trellis_b"
path = "trellis/b.rs"